[gd_scene load_steps=2 format=3 uid="uid://dn3j27lp6mb21"]

[ext_resource type="Script" path="res://Scenes/Screens/Start_Menu/start_menu.gd" id="1_j4ir2"]

[node name="Start_Menu" type="CanvasLayer"]
script = ExtResource("1_j4ir2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -276.5
offset_top = -245.0
offset_right = 276.5
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Start Game"

[node name="Gun_Button" type="Button" parent="Control"]
layout_mode = 1
offset_left = 1122.0
offset_top = 161.0
offset_right = 1230.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 50
text = "Gun"

[node name="Laser_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1280.0
offset_top = 161.0
offset_right = 1419.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 50
text = "Laser"

[node name="Weapon_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 257.0
offset_right = 703.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "Weapons
"

[node name="Current_Weapon_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.5
offset_top = -301.0
offset_right = 131.5
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Current Weapon:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Laser_Text" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -673.0
offset_top = -440.0
offset_right = -3.0
offset_bottom = -88.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "A laser that fires in an infinite line, damaging the first thing in its path.

- Max attack speed
- Minimum damage
- Does 1% max health damage on top of normal damage. 
- All attack speed and bullet velocity upgrades converted into damage"
fit_content = true

[node name="Gun_Text" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -673.0
offset_top = -440.0
offset_right = -3.0
offset_bottom = -88.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "The default gun. 

- Well rounded attack speed and damage
- No special changes to upgrades"
fit_content = true

[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/Gun_Button" to="." method="_on_gun_button_pressed"]
[connection signal="pressed" from="Control/Laser_Button" to="." method="_on_laser_button_pressed"]
